Fix color issues in dark mode

--- a/src/app/departure-item/departure-item.component.scss
+++ b/src/app/departure-item/departure-item.component.scss
@@ -5,7 +5,7 @@ ion-avatar {
 }
 
 ion-note {
-    color: #000;
+    color: var(--ion-text-color);
     padding: 12px 0 10px 0;
 }
 
